04-Stu_Flexbox-Layout/Unsolved/assets/css/style.css
* {
  box-sizing: border-box;
}

body {
  font-family: Arial;
  margin: 0;
}

main {
  display: flex;
  margin-top: 2%;
}

.main-header {
  display: flex;
  justify-content: space-between;
  padding: 60px;
  background: #13293d;
  color: #fff;
}

.card {
  flex: 1 0 0;
  padding: 10px;
  text-align: center;
  border-style: solid;
  border-width: 1px;
}

.card header {
  padding: 20px;
  background: #13293d;
  color: #fff;
}

.card img {
  width: 100%;
  /* The client insists that images be at least 400px */
  min-width: 400px;
}

